feat&fix : CarList를 위한 CarManager 생성,적용